--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 27
     buildToolsVersion '27.0.3'
 
     defaultConfig {
@@ -23,8 +23,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //noinspection GradleCompatible
-    api 'com.android.support:appcompat-v7:23.4.0'
-    api 'com.google.android.gms:play-services-maps:10.2.1'
+    //api 'com.android.support:appcompat-v7:23.4.0'
+    //api 'com.google.android.gms:play-services-maps:10.2.1'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
     api group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
 }
 
