se modifico la direccion de SDK

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Nov 13 12:24:23 ART 2018
-sdk.dir=/Users/gcarreno/Library/Android/sdk
+sdk.dir=C\:\\Users\\Maria\\AppData\\Local\\Android\\Sdk
